support partial mapping and password pre-checking

--- a/Shaman.Dokan.Archive/Properties/launchSettings.json
+++ b/Shaman.Dokan.Archive/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "Shaman.Dokan.Archive": {
       "commandName": "Project",
-      "commandLineArgs": "R:/working/2.7z S: -p test"
+      "commandLineArgs": "R:/working/pass.7z s: -p test"
     }
   }
 }
